# Code

./: .gitignore
Projet-C/ascii-art/: Makefile  ascii-art  font.txt
Projet-C/ascii-art/include/: display_utils.h
Projet-C/ascii-art/src/: display_utils.c  main.c
Projet-C/game-of-life/: CMakeLists.txt  README.md  dependency_map.html  dependency_map.html.bak  game-of-life  gen_depmap.py  keys.cfg
Projet-C/game-of-life/src/: app.h  app_draw-1.c  app_draw-2.c  app_draw-3.c  app_draw-4.c  app_draw.c  app_draw2.c  app_draw3.c  app_init.c  app_input-01.c  app_input-02.c  app_input-03.c  app_input-04.c  app_input-05.c  app_input-06.c  app_input-07.c  app_input-08.c  app_input-09.c  app_input-1.c  app_input-2.c  app_input-3.c  app_input-4.c  app_input-5.c  app_input-6.c  app_input-7.c  app_input-8.c  app_input-9.c  app_input.c  app_input2.c  app_input3.c  app_input4.c  app_input5.c  app_input6.c  app_input7.c  app_input8.c  app_map-1.c  app_map-2.c  app_map-3.c  app_map.c  app_map2.c  (+118 more)
Projet-C/librarie/: README.md  main.js  package.json  preload.js
Projet-C/librarie/src/: app.js  index.html  style.css
Projet-Python/: code.txt  menu.py  test-couleurs.py
Projet-Python/Binome-Triangle-Pascal/: binome-pascal.py
Projet-Python/Detect-Copies/: detect-copies.py  image-jpg.py  video-mp4.py
Projet-Python/Hypixel/: test.py
Projet-Python/Jeu de la vie/: grid.py  main.py  renderer.py
Projet-Python/Minecraft/: find_dragon_egg.py  locate.py  map_superficie.py
Projet-Python/Solver-Labyrinth/: generate_maze.py  main.py  maze_solver.py  maze_solver_path.py  menu.py  mover.py
Projet-Python/Solver-Labyrinth/labyrinthe/: maze_info.txt  maze_path.txt
Projet-Python/Stéganographie/: hexa.py  rgb.py  trad.py  trans.py
Projet-Python/Stéganographie/info/: hex_output_raw.txt  readable_hex_output.txt
Projet-Python/Stéganographie/trad/: input.txt  output_bin.txt  output_bin3.txt  output_hex.txt
Projet-Python/Tree-Structure/: list-folder-file.py
Projet-Python/Tree-Structure/src/: errors-report.txt  render.js  script.js  style.css  template.html
Projet-Scratch/: dessin pour papa.sb3
Projet-Scratch/jeu 2/: Projet Scratch 1.sb3  Projet Scratch 2.sb3  Projet Scratch 3.sb3  Projet Scratch 4.sb3  Projet Scratch 5.sb3  Projet Scratch 6.sb3  Projet Scratch 7.sb3  Projet Scratch 8.sb3
Projet-sh/: managers.sh  test.sh
